--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -974,7 +974,7 @@
                 $("#selectEscort").html('');
             }
 
-           // $('#remark').val(patient.Remarks); //Amir request not to show a patient remark by default to any new ridepat...
+            $('#remark').val(patient.Remarks); 
             $('#remark').prop('disabled', false);
             $('#PatientIdentity').val(patient.PatientIdentity);
 
