--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1136,9 +1136,9 @@
                         //#endregion
 
                         //#region buttons
-                        editBtn = `<button type='button' class='edit btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='עריכה'><i class='ti-pencil'></i></button>`;
+                        editBtn = `<button type='button' class='edit btn btn-icon waves-effect waves-light btn-primary btn-sm m-r-5 m-b-5' id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='עריכה'><i class='ti-pencil'></i></button>`;
                         deleteBtn = `<button type='button' class='remove btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='מחיקה'><i class='fa fa-remove'></i></button>`;
-                        btnStr = `${editBtn} ${deleteBtn}`;
+                        btnStr = `<div class='btnsInSameLine'>${editBtn} ${deleteBtn}</div>`;
                         //#endregion buttons
 
                         thisRidePat = {
@@ -1637,7 +1637,7 @@
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
                                                             <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
-                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
+                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Org - Dest</th>
                                                             <th class="customWidth  middle" title="Remarks  ملاحظات">הערות</th>
                                                             <th title="isAnonymous"></th> <!-- hidden to the user -->
                                                             <th class="SmallcustomWidth  middle" title="Actions  اعمال">פעולות</th>
@@ -1665,7 +1665,7 @@
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
                                                             <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
-                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
+                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Org - Dest</th>
                                                             <th class="customWidth  middle" title="Remarks  ملاحظات">הערות</th>
                                                             <th title="isAnonymous"></th> <!-- hidden to the user -->
                                                             <th class="SmallcustomWidth middle" title="Actions  اعمال">פעולות</th>
@@ -1694,7 +1694,7 @@
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
                                                             <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
-                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
+                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Org - Dest</th>
                                                             <th class="customWidth  middle" title="Remarks  ملاحظات">הערות</th>
                                                             <th title="isAnonymous"></th> <!-- hidden to the user -->
                                                             <th class="SmallcustomWidth middle" title="Actions  اعمال">פעולות</th>
@@ -1723,7 +1723,7 @@
                                                             <th class="middle" title="Driver  السائق">המסיע</th>
                                                             <th class="middle" title="Status  حالة السفرية">סטטוס ההסעה</th>
                                                             <th class="customWidth middle" title="Last modified">עודכן לאחרונה</th>
-                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Origin - Destination</th>
+                                                            <th class="customWidth middle" title="نقطة الانطلاق - نقطة الوصول Origin - Destination">Org - Dest</th>
                                                             <th class="customWidth  middle" title="Remarks  ملاحظات">הערות</th>
                                                             <th title="isAnonymous"></th> <!-- hidden to the user -->
                                                             <th class="SmallcustomWidth middle" title="Actions  اعمال">פעולות</th>
