--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -135,6 +135,7 @@
     </div>
     <div class="text-center">
         תאריך עדכון אחרון: 24/05/2021 17:15
+        <strong>גרסאת בדיקה real-time</strong>
     </div>
     <div class="row" id="footer">
         <div class="col-sm-4">
