some more signalr
1. add a test html page to play with signalr
2. add a way to call signalr functionality from server as well using IHubContext

--- a/Road to Recovery/pages/signalRIndex.html
+++ b/Road to Recovery/pages/signalRIndex.html
@@ -34,7 +34,7 @@
             //create a chat hub
 
 
-            var chat = $.connection.chatHub;
+            const chat = $.connection.chatHub;
 
             chat.client.broadcastMessage = function (name, message) {
 
