--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -298,6 +298,7 @@
 
                     tbl = $('#datatable-buttons').DataTable({
                         data: allVolunteersFromDb,
+                        stateSave: true,
                         rowId: 'Id',
                         "autoWidth": false,
                         "destroy": true,
