--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -281,6 +281,7 @@
 
                     tbl = $('#datatable-buttons').DataTable({
                         data: allPatientsFromDB,
+                        stateSave: true,
                         "autoWidth": false,
                         "destroy": true,
                         dom: 'Bfrtip',
